# Scaffold-Map

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  fig5.sh  leg-flow6.off  leg-intersect.off
cmake/: FindLIBIGL.cmake
src/: ReWeightedARAP.cpp  ReWeightedARAP.h  ReWeightedARAP_solve.cpp  ScafData.cpp  ScafData.h  ScaffoldSolver.cpp  ScaffoldSolver.h  StateManager.cpp  StateManager.h  main.cpp  main_flow.cpp  main_texture.cpp
src/BFGS/: SequentialLBFGS.cpp  SequentialLBFGS.h
src/Newton/: SchaeferNewtonParametrizer.cpp  SchaeferNewtonParametrizer.h  autodiff.h  parametrization_utils.h
src/UI/: DeformGUI.cpp  DeformGUI.h  DeformGUI_key_press.cpp  TextureGUI.cpp  TextureGUI.h  TextureGUI_extended_menu.cpp  TextureGUI_mouse_control.cpp
src/demo/: bars_stack_construction.cpp  demo_gen.cpp  flow_demo.cpp  parameterization_init.cpp  plank_stack_construction.cpp  tight_packing_demo.cpp
src/igl_dev/: edge_removal.cpp  edge_removal.h  multi_face_removal.cpp  multi_face_removal.h  retain_tetrahedral_adjacency.cpp  retain_tetrahedral_adjacency.h  scaf.cpp  scaf.h  tet_refine_operations.cpp  tet_refine_operations.h  tetrahedron_tetrahedron_adjacency.cpp  tetrahedron_tetrahedron_adjacency.h  tetrahedron_tuple.cpp  tetrahedron_tuple.h  triangle_tuple.cpp
src/util/: advection_aware_edge_flip.cpp  advection_aware_edge_flip.h  tet_utils.cpp  tet_utils.h  tetgenio_parser.cpp  tetgenio_parser.h  tetrahedral_improvement.h  triangle_utils.cpp  triangle_utils.h
test/: test_tet.cpp
